# tinyfugue

./: .gitignore  BACKLOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Justfile  REWRITE_PLAN.md  RUST_CODE_REVIEW.md
.github/workflows/: build.yml
lib/tf/: tf-help.idx
src/: expr.c  macro.c  malloc.c  pattern.c  signals.c  socket.c  tfio.c
tf-rs/: Cargo.toml  removing-aho-corasick.md
tf-rs/benches/: substr_bench.rs
tf-rs/docs/: tinyfugue-lang.md
tf-rs/examples/: bench_substr.rs
tf-rs/src/: attr.rs  cli.rs  config.rs  embedded.rs  event_loop.rs  history.rs  hook.rs  input.rs  keybind.rs  lib.rs  lua.rs  macros.rs  main.rs  net.rs  pattern.rs  process.rs  python.rs  screen.rs  telnet.rs  terminal.rs  tfstr.rs  var.rs  world.rs
tf-rs/src/script/: builtins.rs  expand.rs  expr.rs  interp.rs  mod.rs  stmt.rs  value.rs
tf-rs/tests/: compat_tests.rs  property_tests.rs
