[package]
name = "tf"
version = "0.1.0"
edition = "2021"
description = "TinyFugue MUD client (Rust rewrite)"

[lib]
name = "tf"
path = "src/lib.rs"

[[bin]]
name = "tf"
path = "src/main.rs"

[features]
lua = ["dep:mlua"]
python = ["dep:pyo3"]

[dependencies]
regex = "1"
aho-corasick = "0.7"
crossterm = "0.28"
tokio = { version = "1", features = ["net", "io-util", "io-std", "rt-multi-thread", "macros", "signal", "time", "process", "sync"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
flate2 = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
pyo3 = { version = "0.22", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3"
